[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="Node2D" parent="."]
visible = false
position = Vector2( 312.603, 251.515 )

[node name="Name" type="TextEdit" parent="UI"]
margin_right = 130.0
margin_bottom = 25.0
rect_scale = Vector2( 3, 2 )
text = "cliente"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login" type="Button" parent="UI"]
margin_left = 99.0
margin_top = 59.0
margin_right = 154.0
margin_bottom = 79.0
rect_scale = Vector2( 3, 3 )
text = "LOGIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI"]
margin_top = -21.4057
margin_right = 40.0
margin_bottom = -7.40573
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="."]
margin_left = 17.8381
margin_top = 11.8921
margin_right = 62.8381
margin_bottom = 25.8921
rect_scale = Vector2( 2, 2 )
text = "Logado"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI_CONECT" type="Node2D" parent="."]

[node name="Desconnected" type="Button" parent="UI_CONECT"]
margin_left = 814.388
margin_top = 11.8921
margin_right = 918.388
margin_bottom = 31.8921
rect_scale = Vector2( 2, 2 )
text = "Desconnected"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enviar" type="Button" parent="UI_CONECT"]
margin_left = 666.603
margin_top = 503.416
margin_right = 770.603
margin_bottom = 523.416
rect_scale = Vector2( 1.5, 1.5 )
text = "Enviar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Painel" type="RichTextLabel" parent="UI_CONECT"]
margin_left = 108.0
margin_top = 117.0
margin_right = 814.0
margin_bottom = 406.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Msg" type="TextEdit" parent="UI_CONECT"]
margin_left = 108.0
margin_top = 496.0
margin_right = 654.0
margin_bottom = 536.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="UI/login" to="." method="_on_login_button_down"]
[connection signal="button_down" from="UI_CONECT/Desconnected" to="." method="_on_Desconnected_button_down"]
[connection signal="button_down" from="UI_CONECT/Enviar" to="." method="_on_Enviar_button_down"]
